crates/pardosa-schema/tests/compile_fail/serde_tag.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
#[serde(tag = "type")]
enum Bad {
    A { x: u32 },
    B { y: String },
}
fn main() {}
